@@ -1,3 +1,6 @@
+22 January 2009
++ Fixed permission checks on folders.
+
 Version 2.2.1
 ---------------------------------------------------------------------------
 19 December 2008
